Fix some code style